Grund-Design ausgebaut (Dark-Style)

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div id="login">
         <form class="login-container__window">
             <h1 class="text">Login</h1>
-            <label for="login-name"><b>Username</b></label>
+            <label for="login-name"><b>Benutzername</b></label>
             <input class="login-container__window__input" type="text" id="login-name" placeholder="Benutzername"
                    name="name"
                    required>
